@@ -24,6 +24,7 @@
             Bangle.js2: Do a soft reset every time we start the SPL06 pressure sensor (stops occasional sensor lockup)
             Graphics: wrapString will now wrap lines on comma, dot, dash, and between images
             Graphics: Improve PBF font loading to handle v3, plus Espruino extension to handle >10k glyphs in one file
+            Graphics: Graphics.stringMetrics now returns 'unknownChars' to indicate if a font can't render a character in the String
 
      2v19 : Fix Object.values/entries for numeric keys after 2v18 regression (fix #2375)
             nRF52: for SD>5 use static buffers for advertising and scan response data (#2367)
